--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "dotenv": "^10.0.0",
-    "fastify": "^3.24.1"
+    "fastify": "^3.24.1",
+    "fastify-autoload": "^3.9.0"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
