--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "docker": "yarn build && yarn start"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "fastify": "^3.24.1",
     "fastify-autoload": "^3.9.0"
