feat: Mongo Connection, Register Endpoint

--- a/package.json
+++ b/package.json
@@ -13,13 +13,17 @@
     "docker": "yarn build && yarn start"
   },
   "dependencies": {
+    "argon2": "^0.28.3",
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
     "fastify": "^3.24.1",
-    "fastify-autoload": "^3.9.0"
+    "fastify-autoload": "^3.9.0",
+    "mongoose": "^6.0.14",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
+    "@types/uuid": "^8.3.3",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.2"
   }
