--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^10.0.0",
     "fastify": "^3.24.1",
     "fastify-autoload": "^3.9.0",
+    "joi": "^17.5.0",
     "mongoose": "^6.0.14",
     "uuid": "^8.3.2"
   },
