--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
     "fastify-autoload": "^3.9.0",
     "joi": "^17.5.0",
     "mongoose": "^6.0.14",
+    "nodemailer": "^6.7.2",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
+    "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.3",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.2"
