--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "dotenv": "^10.0.0",
     "fastify": "^3.24.1",
     "fastify-autoload": "^3.9.0",
+    "fastify-cors": "^6.0.2",
+    "fastify-helmet": "^5.3.2",
+    "fastify-rate-limit": "^5.6.2",
     "joi": "^17.5.0",
     "mongoose": "^6.0.14",
     "nodemailer": "^6.7.2",
