--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "docker": "yarn build && yarn start"
   },
   "dependencies": {
+    "axios": "^0.24.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0"
   },
