--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "docker": "yarn build && yarn start"
   },
   "dependencies": {
-    "@sapphire/framework": "^2.3.0-pr-293.4ad3ee9.0",
+    "@sapphire/framework": "2.3.0-pr-293.3cf4ed8.0",
     "axios": "^0.24.0",
     "discord.js": "^13.3.1",
     "dotenv": "^10.0.0"
