feat: Login Endpoint

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 PORT=
 HOST=
-S3_INFO=
 CDN_URL=
+S3_INFO=
 NODE_ENV=
 S3_BUCKET=
 MONGO_URI=
 MAIL_INFO=
+COOKIE_KEY=
 DOCKER_STARTUP_WEBHOOK_URL=
