--- a/package.json
+++ b/package.json
@@ -22,15 +22,19 @@
     "fastify-cors": "^6.0.2",
     "fastify-helmet": "^5.3.2",
     "fastify-multer": "^2.0.2",
+    "fastify-passport": "^0.4.3",
     "fastify-rate-limit": "^5.6.2",
+    "fastify-secure-session": "^3.0.0",
     "joi": "^17.5.0",
     "mongoose": "^6.0.14",
     "nodemailer": "^6.7.2",
+    "passport-local": "^1.0.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^16.11.11",
     "@types/nodemailer": "^6.4.4",
+    "@types/passport-local": "^1.0.34",
     "@types/uuid": "^8.3.3",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.2"
