--- a/package.json
+++ b/package.json
@@ -16,29 +16,25 @@
     "type-check": "tsc"
   },
   "dependencies": {
-    "@chakra-ui/gatsby-plugin": "^2.0.1",
-    "@chakra-ui/icons": "^1.0.16",
+    "@babel/core": "^7.0.0",
     "@chakra-ui/react": "^1.6.10",
-    "@chakra-ui/theme-tools": "^1.2.2",
-    "@emotion/react": "^11.5.0",
-    "@emotion/styled": "^11.3.0",
-    "@react-icons/all-files": "^4.1.0",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "axios": "^0.23.0",
     "focus-visible": "^5.2.0",
-    "framer-motion": "^4.1.17",
+    "framer-motion": "^5.4.5",
     "global": "^4.4.0",
     "next": "latest",
     "next-seo": "^4.28.1",
     "nord": "^0.2.1",
     "react": "^17.0.2",
-    "react-custom-scrollbars": "^4.2.1",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "@types/node": "^12.20.34",
     "@types/react": "^17.0.32",
-    "@types/react-dom": "^17.0.10",
+    "@types/react-dom": "^17.0.11",
     "typescript": "^4.4.4"
   }
 }
